--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -7,9 +7,9 @@ metadata:
     # Add ingress controller specific annotations as needed
     kubernetes.io/ingress.class: "nginx"
 spec:
+  ingressClassName: nginx
   rules:
-    - host: localhost
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
